// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation of the Option control 1`] = `
<div
  className="ui-option option normal test-class"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
>
  <ButtonToggle
    bgColorOff="inherit"
    bgColorOn="inherit"
    className="optionButton"
    contentEditable={false}
    direction="right"
    disabled={false}
    fgColorOff="inherit"
    fgColorOn="inherit"
    focus={false}
    height=""
    iconName="bomb"
    iconNameOff="square-o"
    iconNameOn="check-square-o"
    iconStyle=""
    id=""
    initialToggle={true}
    location="none"
    noedit={false}
    nohover={true}
    noripple={false}
    onClick={[Function]}
    optionType={0}
    selected={true}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
    testing={true}
    text="test"
    theme={Object {}}
    visible={true}
    width=""
    xcss={null}
  />
  <span>
    test
  </span>
</div>
`;

exports[`Test Option control click event 1`] = `
<Option
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  optionType={0}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  text=""
  theme={Object {}}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-option option normal"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
  >
    <ButtonToggle
      bgColorOff="inherit"
      bgColorOn="inherit"
      className="optionButton"
      contentEditable={false}
      direction="right"
      disabled={false}
      fgColorOff="inherit"
      fgColorOn="inherit"
      focus={false}
      height=""
      iconName="bomb"
      iconNameOff="square-o"
      iconNameOn="check-square-o"
      iconStyle=""
      id=""
      initialToggle={false}
      location="none"
      noedit={false}
      nohover={true}
      noripple={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
        }
      }
      testing={true}
      text=""
      theme={Object {}}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "headerHoverColor": "#ffe11a",
            "hoverColor": "#c0c0c0",
          }
        }
      >
        <Button
          bgColorOff="inherit"
          bgColorOn="inherit"
          className="ui-button-toggle optionButton nohover"
          contentEditable={false}
          direction="right"
          disabled={false}
          fgColorOff="inherit"
          fgColorOn="inherit"
          focus={false}
          height=""
          iconName="square-o"
          iconNameOff="square-o"
          iconNameOn="check-square-o"
          iconStyle=""
          id=""
          initialToggle={false}
          location="none"
          noedit={false}
          nohover={true}
          noripple={true}
          onClick={[Function]}
          optionType={0}
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "inherit",
            }
          }
          testing={true}
          text=""
          theme={Object {}}
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
              }
            }
          >
            <styled.div
              className="ui-button nohover ui-button-toggle optionButton nohover"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                }
              }
              visible={true}
            >
              <div
                className="ui-button nohover ui-button-toggle optionButton nohover sc-htpNat eaVJAo"
                disabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                  }
                }
              >
                <Icon
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="square-o"
                  id=""
                  imageFile=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "headerHoverColor": "#ffe11a",
                        "hoverColor": "#c0c0c0",
                      }
                    }
                  >
                    <styled.i
                      className="ui-icon fa fa-fw fa-square-o"
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      iconName="square-o"
                      id=""
                      imageFile=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-square-o sc-bdVaJa iGRPLq"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height=""
                        id=""
                        selected={false}
                        style={Object {}}
                        width=""
                      />
                    </styled.i>
                  </ThemeProvider>
                </Icon>
              </div>
            </styled.div>
          </ThemeProvider>
        </Button>
      </ThemeProvider>
    </ButtonToggle>
  </div>
</Option>
`;

exports[`Test disabling of the Option control 1`] = `
<Option
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  optionType={0}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  text=""
  theme={Object {}}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-option option normal disabled nohover"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
  >
    <ButtonToggle
      bgColorOff="inherit"
      bgColorOn="inherit"
      className="optionButton"
      contentEditable={false}
      direction="right"
      disabled={true}
      fgColorOff="inherit"
      fgColorOn="inherit"
      focus={false}
      height=""
      iconName="bomb"
      iconNameOff="square-o"
      iconNameOn="check-square-o"
      iconStyle=""
      id=""
      initialToggle={false}
      location="none"
      noedit={false}
      nohover={true}
      noripple={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
        }
      }
      testing={true}
      text=""
      theme={Object {}}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "headerHoverColor": "#ffe11a",
            "hoverColor": "#c0c0c0",
          }
        }
      >
        <Button
          bgColorOff="inherit"
          bgColorOn="inherit"
          className="ui-button-toggle optionButton nohover"
          contentEditable={false}
          direction="right"
          disabled={true}
          fgColorOff="inherit"
          fgColorOn="inherit"
          focus={false}
          height=""
          iconName="square-o"
          iconNameOff="square-o"
          iconNameOn="check-square-o"
          iconStyle=""
          id=""
          initialToggle={false}
          location="none"
          noedit={false}
          nohover={true}
          noripple={true}
          onClick={[Function]}
          optionType={0}
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "inherit",
            }
          }
          testing={true}
          text=""
          theme={Object {}}
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
              }
            }
          >
            <styled.div
              className="ui-button nohover ui-button-toggle optionButton nohover"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                }
              }
              visible={true}
            >
              <div
                className="ui-button nohover ui-button-toggle optionButton nohover sc-htpNat cDPcSb"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                  }
                }
              >
                <Icon
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="square-o"
                  id=""
                  imageFile=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "headerHoverColor": "#ffe11a",
                        "hoverColor": "#c0c0c0",
                      }
                    }
                  >
                    <styled.i
                      className="ui-icon fa fa-fw fa-square-o"
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      iconName="square-o"
                      id=""
                      imageFile=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-square-o sc-bdVaJa iGRPLq"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height=""
                        id=""
                        selected={false}
                        style={Object {}}
                        width=""
                      />
                    </styled.i>
                  </ThemeProvider>
                </Icon>
              </div>
            </styled.div>
          </ThemeProvider>
        </Button>
      </ThemeProvider>
    </ButtonToggle>
  </div>
</Option>
`;

exports[`Test making the Option control invisible 1`] = `
<Option
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  optionType={0}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  text=""
  theme={Object {}}
  visible={false}
  width=""
  xcss={null}
>
  <div
    className="ui-option option normal invisible"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
  >
    <ButtonToggle
      bgColorOff="inherit"
      bgColorOn="inherit"
      className="optionButton"
      contentEditable={false}
      direction="right"
      disabled={false}
      fgColorOff="inherit"
      fgColorOn="inherit"
      focus={false}
      height=""
      iconName="bomb"
      iconNameOff="square-o"
      iconNameOn="check-square-o"
      iconStyle=""
      id=""
      initialToggle={false}
      location="none"
      noedit={false}
      nohover={true}
      noripple={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
        }
      }
      testing={true}
      text=""
      theme={Object {}}
      visible={false}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "headerHoverColor": "#ffe11a",
            "hoverColor": "#c0c0c0",
          }
        }
      >
        <Button
          bgColorOff="inherit"
          bgColorOn="inherit"
          className="ui-button-toggle optionButton nohover"
          contentEditable={false}
          direction="right"
          disabled={false}
          fgColorOff="inherit"
          fgColorOn="inherit"
          focus={false}
          height=""
          iconName="square-o"
          iconNameOff="square-o"
          iconNameOn="check-square-o"
          iconStyle=""
          id=""
          initialToggle={false}
          location="none"
          noedit={false}
          nohover={true}
          noripple={true}
          onClick={[Function]}
          optionType={0}
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "inherit",
            }
          }
          testing={true}
          text=""
          theme={Object {}}
          visible={false}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
              }
            }
          >
            <styled.div
              className="ui-button nohover ui-button-toggle optionButton nohover"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                }
              }
              visible={false}
            >
              <div
                className="ui-button nohover ui-button-toggle optionButton nohover sc-htpNat obZDX"
                disabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                  }
                }
              >
                <Icon
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="square-o"
                  id=""
                  imageFile=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "headerHoverColor": "#ffe11a",
                        "hoverColor": "#c0c0c0",
                      }
                    }
                  >
                    <styled.i
                      className="ui-icon fa fa-fw fa-square-o"
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      iconName="square-o"
                      id=""
                      imageFile=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-square-o sc-bdVaJa iGRPLq"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height=""
                        id=""
                        selected={false}
                        style={Object {}}
                        width=""
                      />
                    </styled.i>
                  </ThemeProvider>
                </Icon>
              </div>
            </styled.div>
          </ThemeProvider>
        </Button>
      </ThemeProvider>
    </ButtonToggle>
  </div>
</Option>
`;

exports[`Test retrieval of Option props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "optionType": 0,
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "inherit",
    "color": "inherit",
  },
  "testing": true,
  "text": "",
  "theme": Object {},
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
